# appengine

./: .gitignore  .trivyignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile  README.md  SPRINT_PLAN.md  STATUS.md  deny.toml  dev.sh  docker-compose.yml  pr.json  pr_payload.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  technical_debt.md
.github/workflows/: base-image.yml  build-merklekv-windows-sfx.yml  ci.yml  dev-hot-signature-e2e.yml  e2e-smoke.yml  feature-ci.yml  main-coverage.yml  sidecar-image.yml  sqlx-prepare.yml
charts/control-plane/: Chart.yaml  values.yaml
charts/control-plane/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  role.yaml  rolebinding.yaml  secret.yaml  service.yaml  serviceaccount.yaml
crates/aether-cli/: Cargo.toml  README.md
crates/aether-cli/benches/: chunk_bench.rs  pack_bench.rs  stream_bench.rs
crates/aether-cli/benches/baseline/: bench-pack.json  bench-stream.json
crates/aether-cli/src/: config.rs  errors.rs  lib.rs  logging.rs  main.rs
crates/aether-cli/src/commands/: completions.rs  deploy.rs  dev.rs  iofail.rs  list.rs  login.rs  logs.rs  mod.rs  netfail.rs  runtimefail.rs  usagefail.rs
crates/aether-cli/src/util/: mod.rs  time.rs
crates/aether-cli/tests/: cli_basic.rs  config_dirs.rs  deploy_artifact.rs  deploy_cache.rs  deploy_json_output.rs  deploy_large_stress.rs  deploy_no_sbom.rs  deploy_non_node.rs  deploy_npm_fail.rs  deploy_out_and_manifest.rs  deploy_sbom_and_sig.rs  deploy_streaming_large.rs  exit_codes.rs  integration_upload_deploy.rs  logs_command.rs  misc.rs  prop_username.rs  sbom_dependencies.rs  tls_smoke.rs  unit_config.rs  unit_errors.rs
crates/control-plane/: Cargo.toml  README.md  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.sbom.json  dddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd.sbom.json
crates/control-plane/migrations/: 202509260001_init.sql  202509270001_add_artifacts.sql  202509270002_add_public_keys.sql  202509270003_add_artifact_storage_and_status.sql  202509280001_artifact_extensions.sql  202509290001_add_deployment_digest_and_failure.sql  202509290002_add_last_transition.sql  202509290003_add_signature.sql  202510010001_add_provenance_flag.sql  202510070001_issue06_manifest_columns.sql  202510110001_add_users_auth.sql
crates/control-plane/src/: auth.rs  backfill.rs  db.rs  dev_hot_ingest.rs  error.rs  k8s.rs  k8s_watch.rs  lib.rs  main.rs  models.rs  provenance.rs  storage.rs  telemetry.rs  test_support.rs
crates/control-plane/src/handlers/: apps.rs  artifacts.rs  deployments.rs  health.rs  keys.rs  mod.rs  provenance.rs  readiness.rs  uploads.rs
crates/control-plane/src/services/: apps.rs  deployments.rs  mod.rs
crates/control-plane/tests/: artifact_verify_metric.rs  artifacts.rs  auth_policy.rs  auth_rbac.rs  backfill.rs  deployment_status_mock.rs  fast_mode_assert.rs  keys_list.rs  multipart_s3.rs  presign_s3.rs  provenance_dual_sign.rs  provenance_emission.rs  provenance_enforced.rs  provenance_keystore.rs  s3_remote_hash.rs  sbom_full_schema.rs  sbom_manifest_enforcement.rs  schema_checks.rs  upload_endpoint.rs  upload_integrity.rs
crates/ed25519-verify/: Cargo.toml
crates/ed25519-verify/src/: main.rs
crates/helm-rbac-tests/: Cargo.toml
crates/helm-rbac-tests/src/: lib.rs
crates/helm-rbac-tests/tests/: ci_db_stability.rs  helm_rbac.rs  tls_auth_policy.rs
crates/json-extract/: Cargo.toml
crates/json-extract/src/: main.rs
crates/operator/: Cargo.toml
crates/operator/src/: lib.rs  main.rs
crates/operator/tests/: crd_serialization.rs
docs/: operator-guide.md  troubleshooting.md
docs/helm/: README.md  tls.md
docs/issues/: 00-mvp-summary.md  01-cli-core-and-artifact-signing.md  01-cli-foundation.md  02-control-plane-api-and-db-hardening.md  02-control-plane-api.md  03-artifact-registry-integration-s3-minio.md  03-nodejs-build-pack.md  04-dev-environment-script.md  04-kubernetes-deployment-controller-and-init-flow.md  05-dynamic-live-reload-dev-mode.md  05-kubernetes-integration.md  06-sbom-and-supply-chain-security.md  07-observability-and-metrics-expansion.md  08-dev-environment-automation-and-hot-reload-script.md  09-performance-and-benchmarking-suite.md  09-performance-and-benchmarking-suite.tdd.md  10-auth-and-rbac-foundation.md  10-auth-and-rbac-foundation.tdd.md  11-network-stack-unification-hyper-rustls-upgrade.md  12-sprint-1-index.md  13-epic-A-logs-streaming.md  14-epic-B-helm-rbac.md  15-epic-C-ci-db-stability.md  16-epic-D-base-image-pipeline.md  17-epic-E-cli-logs.md  18-sprint-2-index.md  19-epic-F-e2e-performance.md  20-epic-G-tls-auth-policy.md  21-epic-H-sbom-provenance.md  22-epic-I-docs-runbooks.md  README.md
docs/issues/11-network-stack-unification-hyper-rustls-upgrade/: binary-sizes-release.txt  build-time-release.txt  tree-baseline.txt  versions-grep.txt
examples/sample-node/: README.md  index.js  package-lock.json  package.json
images/aether-nodejs/20-slim/: Dockerfile  README.md
k8s/: aetherapp-crd.yaml  control-plane-deployment.yaml  dev-hot-pubkey-secret-example.yaml
scripts/: build-sidecar.sh  check-bench-regression.sh  check-network-stack.sh  dev-hot-e2e.sh  dev-hot-signature-e2e.sh  gen-ts-sdk.sh  measure-build.sh  run_base_image_tests.sh  smoke_e2e.sh
security/: grype-ignore.yaml
sidecar/: Dockerfile
tests/: base_image_test.sh  epic_f_test.sh  epic_h_test.sh  epic_i_test.sh
tests/bench-fixtures/: baseline_pack.json  baseline_stream.json  current_pack_better.json  current_pack_plus10.json  current_pack_plus25.json  current_stream_better.json  current_stream_minus10.json  current_stream_minus25.json
