[workspace]
members = [
  "crates/aether-cli",
  "crates/control-plane",
  "crates/operator",
  "crates/json-extract",
  "crates/ed25519-verify",
  "crates/helm-rbac-tests"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Proprietary"
authors = ["AetherEngine Team <engineering@example.com>"]
rust-version = "1.90"

[workspace.dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "stream", "rustls-tls", "multipart"] }
thiserror = "1"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "macros", "postgres", "sqlite", "uuid", "chrono", "migrate", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
flate2 = { version = "1" }
tar = "0.4"
axum = { version = "0.7", features = ["json", "macros", "multipart"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
criterion = { version = "0.5", features = ["html_reports"] }
kube = { version = "0.94", default-features = false, features = ["runtime", "derive", "client"] }
kube-runtime = "0.94"
futures-util = "0.3"
futures = "0.3"
once_cell = "1"
sha2 = "0.10"
walkdir = "2"
dirs = "5"
clap_complete = "4"
toml = "0.8"
whoami = "1"
glob = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
hex = "0.4"
