[package]
name = "aether-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
uuid = { workspace = true }
sha2 = "0.10"
walkdir = "2"
dirs = "5"

[dev-dependencies]
assert_cmd = "2"
