[package]
name = "aether-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = []

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
uuid = { workspace = true }
sha2 = "0.10"
walkdir = "2"
dirs = "5"
clap_complete = "4"
thiserror = { workspace = true }
toml = "0.8"
whoami = "1"
glob = "0.3"
which = "6"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
proptest = "1"
