[package]
name = "control-plane"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
k8s-openapi = { version = "0.21", features = ["v1_28"] }
tower = { version = "0.4", features = ["util"] }
utoipa = { version = "5", features = ["chrono", "uuid", "axum_extras"] }
prometheus = "0.14"
axum-extra = { version = "0.9", features = ["typed-header"] }
tower-http = { version = "0.5", features = ["limit", "trace"] }

