[package]
name = "control-plane"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
k8s-openapi = { version = "0.21", features = ["v1_28"] }
kube = { version = "0.88", features = ["runtime","derive","client"], default-features = false }
kube-runtime = "0.88"
futures-util = "0.3"
tower = { version = "0.4", features = ["util","timeout"] }
utoipa = { version = "5", features = ["chrono", "uuid", "axum_extras"] }
prometheus = "0.14"
axum-extra = { version = "0.9", features = ["typed-header"] }
tower-http = { version = "0.5", features = ["limit", "trace", "cors"] }
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["std","rand_core"] }
hex = "0.4"
aws-config = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true, default-features = true }
async-trait = "0.1"
url = "2"
regex = "1"
fastrand = "2"
rustc-hash = "1.1"
testcontainers = { version = "0.20", default-features = false, features = ["watchdog"] }

[features]
default = ["s3"]
s3 = ["aws-config", "aws-sdk-s3"]
# Enable lightweight in-memory SQLite for tests (skips S3 specific behavior where not needed).
sqlite-test = []
mock-kube = []
dev-hot-ingest = []

[dev-dependencies]
proptest = "1"
serial_test = "3"
rand = "0.8"
futures = "0.3"
reqwest = { workspace = true }

