[package]
name = "aether-operator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
kube = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
k8s-openapi = { version = "0.21", features = ["v1_28"] }
futures = { workspace = true }
schemars = "0.8"
serde_yaml = "0.9"

[lib]
name = "aether_operator"
path = "src/lib.rs"

[[bin]]
name = "crd-gen"
path = "src/bin/crd-gen.rs"
